# blackbox-generator

./: Cargo.toml  README.md
a-solana-workspace/: example-config.json
src/: generate.rs  init.rs  lib.rs  main.rs  opt.rs  select_command.rs  utils.rs  verify.rs
templates/: config-solana.json  config.json  config_solana.json  example-config-solana.json
