[package]
name = "blackbox-generator"
version = "0.0.7"
edition = "2021"
description="In develop"
repository="https://github.com/rsWrathionTBP/blackbox-generator"
license = "Apache-2.0"

[[bin]]
name = "bbox"
path = "src/main.rs"

[dependencies]
structopt = "0.3.25"
rayon = "1.5.1"
anyhow = "1.0.52"
fs_extra = "1.2.0"
imagesize = "0.9.0"